use_undefined_identifier/c2/gen
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/gen/src/moves.c:1100:6: error: use of undeclared identifier 'dword_66759C'
if ( dword_66759C[v23] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/gen/src/moves.c:1115:6: error: use of undeclared identifier 'dword_66759C'
if ( dword_66759C[v23] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/gen/src/moves.c:1299:6: error: use of undeclared identifier 'dword_66759C'
if ( dword_66759C[v6] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/gen/src/moves.c:1314:6: error: use of undeclared identifier 'dword_66759C'
if ( dword_66759C[v6] ) 
     ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/gen/src/obj/moves.o] Error 1
